fixed conky startup and media player keys

--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@ set $gamelauncher   rofi -show drun -theme games -drun-categories SteamLibrary
 set $scriptlauncher rofi -show run -theme run
 set $windowsearch   rofi -show window -theme window
 set $optionsmenu    $HOME/.config/rofi/scripts/rofi-options-menu.sh
-set $conky          $HOME/.config/conky/conky-wrapper.sh
+set $conky          $HOME/.config/conky/conky-wrapper.sh launch
 #-----------------------------------------------------------------------------#
 
 #----------------------------- Startup applications --------------------------#
@@ -100,9 +100,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 5%-
 bindsym XF86AudioMute        exec --no-startup-id amixer -q sset Master toggle
 
 # Music player controls
-bindsym XF86AudioPlay        exec --no-startup-id playerctl play-pause
-bindsym XF86AudioNext        exec --no-startup-id playerctl next
-bindsym XF86AudioPrev        exec --no-startup-id playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id playerctl -p spotify play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl -p spotify next
+bindsym XF86AudioPrev exec --no-startup-id playerctl -p spotify previous
 
 # Screenshot of entire desktop
 bindsym $mod+F4       exec --no-startup-id scrot -e 'feh $f -x' -d 2
