--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,11 @@ exec --no-startup-id nm-applet --indicator
 set $term      kitty
 set $drun_menu rofi -theme drun -show drun -drun-categories Curated
 set $run_menu  rofi -theme run  -show run
-set $lock      swaylock # Swaylock branch from swaylock-effects-git in AUR
+set $options   ~/dotfiles/config/rofi/scripts/rofi-options-menu.sh
+
+# Swaylock branch from swaylock-effects-git in AUR
+set $lock      swaylock
+set $lock-slow swaylock --grace 15 --fade-in 10
 
 exec swayidle -w \
     timeout 300 "brightnessctl -s set 20%-" \
@@ -49,7 +53,7 @@ set $urgent         $nord11
 
 #------------------------------ Desktop appearance ---------------------------#
 # Set scaling factor
-output eDP-1 res 2400x1600 scale 1.37
+output eDP-1 res 2400x1600 scale 1.333333
 
 # Set walllpaper
 output * bg ~/.config/i3/wallpapers/* fill
@@ -109,8 +113,9 @@ bindsym $mod+Return exec $term
 bindsym $mod+d       exec $drun_menu
 bindsym $mod+shift+d exec $run_menu
 
-# Open options menu
-bindsym $mod+BackSpace exec ~/.config/i3/scripts/rofi_option_menu
+# Pixelbook's hamburger menu button is mapped to XF86Tools
+bindsym XF86Tools      exec $options
+bindsym $mod+XF86Tools exec $lock
 
 # Volume control
 bindsym XF86AudioRaiseVolume exec pactl -- set-sink-volume 0 +5% 
@@ -120,9 +125,6 @@ bindsym XF86AudioMute        exec pactl set-sink-mute 0 toggle
 # Backlight control
 bindsym XF86MonBrightnessUp   exec brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
-
-# Lock screen
-bindsym $mod+Pause exec $lock
 #-----------------------------------------------------------------------------#
 
 #---------------------------- Workspace navigation ---------------------------#
