fixed rEFInd config and theme

--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -3,18 +3,17 @@
 scanfor manual,external,optical
 default_selection 1
 timeout 10
-use_graphics_for linux,windows
+use_graphics_for linux
 use_nvram false
 
 menuentry "Arch Linux" {
-    icon     /EFI/BOOT/refind-nord/icons/os_arch.png
+    icon     /EFI/refind/refind-nord/icons/os_arch.png
     loader   vmlinuz-linux
     initrd   initramfs-linux.img
-    # Options "quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0" are for Plymouth
-    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swap nvidia-drm.modeset=1 rw quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
+    options  "cryptdevice=UUID=01af43ce-7ba2-41cc-9600-eb9499ad2505:cryptlvm root=/dev/RootGroup/root resume=/dev/RootGroup/swap rw quiet splash rd.udev.log_priority=3 vt.global_cursor_default=0 add_efi_memmap"
 
     submenuentry "Boot to terminal" {
-        options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root systemd.unit=multi-user.target rw"
+        options  "cryptdevice=UUID=01af43ce-7ba2-41cc-9600-eb9499ad2505:cryptlvm root=/dev/RootGroup/root systemd.unit=multi-user.target rw"
     }
 }
 
