--- a/applications/curated/jellyfin.desktop
+++ b/applications/curated/jellyfin.desktop
@@ -3,7 +3,7 @@
 Terminal=false
 Type=Application
 Name=Jellyfin
-Exec=firefox -P app --new-window "http://localhost:8096/web/index.html"
+Exec=env MOZ_USE_XINPUT2=1 MOZ_ENABLE_WAYLAND=1 firefox -P app --new-window "http://tau:8096/web/index.html"
 Icon=jellyfin
 StartupWMClass=jellyfin
 Categories=Network;WebBrowser;Curated;
