--- a/applications/curated/firefox.desktop
+++ b/applications/curated/firefox.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Firefox
 GenericName=Web Browser
 Keywords=Internet;WWW;Browser;Web;Explorer
-Exec=env MOZ_USE_XINPUT2=1 MOZ_ENABLE_WAYLAND=1 firefox -P default
+Exec=env MOZ_DISABLE_RDD_SANDBOX=1 MOZ_USE_XINPUT2=1 MOZ_ENABLE_WAYLAND=1 firefox -P default
 Icon=firefox
 Terminal=false
 X-MultipleArgs=false
