--- a/sway/config
+++ b/sway/config
@@ -3,7 +3,7 @@
 
 exec --no-startup-id dropbox start
 exec --no-startup-id nm-applet --indicator
-exec --no-startup-id mako # Notification daemon
+exec --no-startup-id dunst # Notification daemon
 
 set $term      kitty
 set $drun_menu rofi -theme drun -show drun -drun-categories Curated
