--- a/sway/config
+++ b/sway/config
@@ -4,11 +4,13 @@
 exec --no-startup-id dropbox start
 exec --no-startup-id nm-applet --indicator
 exec --no-startup-id dunst # Notification daemon
+exec --no-startup-id wlsunset -l 35 -L -107 -t 4000
 
 set $term      kitty
-set $drun_menu rofi -theme drun -show drun -drun-categories Curated
-set $run_menu  rofi -theme run  -show run
-set $options   ~/dotfiles/config/rofi/scripts/rofi-options-menu.sh
+set $applauncher    $HOME/.config/rofi/scripts/rofi-wrapper.sh drun
+set $scriptlauncher $HOME/.config/rofi/scripts/rofi-wrapper.sh run
+set $windowsearch   $HOME/.config/rofi/scripts/rofi-wrapper.sh windows
+set $optionsmenu    $HOME/.config/rofi/scripts/rofi-wrapper.sh options
 
 # Swaylock branch from swaylock-effects-git in AUR
 set $lock      swaylock
@@ -16,8 +18,8 @@ set $lock-slow swaylock --grace 15 --fade-in 10
 
 exec swayidle \
     timeout 540 "$lock-slow" \
-    timeout 600 "brightnessctl --save set 0%" \
-        resume "brightnessctl --restore" \
+    timeout 600 "brightnessct set 0%" \
+        resume "brightnessctl set 10%" \
     timeout 30 "~/dotfiles/pixelbook/keyboard-backlight.sh set 0" \
         resume "~/dotfiles/pixelbook/keyboard-backlight.sh set 20"
 
@@ -55,7 +57,7 @@ set $urgent         $nord11
 
 #------------------------------ Desktop appearance ---------------------------#
 # Set scaling factor
-output eDP-1 res 2400x1600 scale 1
+output eDP-1 res 2400x1600 scale 1.33333333
 
 # Set walllpaper
 output * bg ~/.config/sway/wallpapers/current/* fill
@@ -119,11 +121,14 @@ input "type:touchpad" {
 bindsym $mod+Return exec $term
 
 # Bring up launcher
-bindsym $mod+d       exec $drun_menu
-bindsym $mod+shift+d exec $run_menu
+bindsym $mod+d       exec $applauncher
+bindsym $mod+shift+d exec $scriptlauncher
+
+# Search open windows
+bindsym $mod+grave   exec --no-startup-id $windowsearch
 
 # Pixelbook's hamburger menu button is mapped to XF86Tools
-bindsym XF86Tools      exec $options
+bindsym XF86Tools      exec $optionsmenu
 bindsym $mod+XF86Tools exec $lock
 
 # /etc/systemd/logind.conf is edited to add HandlePowerKey=ignore so Sway
