--- a/sway/config
+++ b/sway/config
@@ -48,10 +48,12 @@ set $nord13 #EBCB8B
 set $nord14 #A3BE8C
 set $nord15 #B48EAD
 
-set $background     $nord0
-set $bg_alt         $nord3
-set $foreground     $nord4
-set $primary        $nord15
+set $background0    $nord0
+set $background1    $nord1
+set $background2    $nord3
+set $text_light     $nord4
+set $text_dark      $nord0
+set $accent         $nord15
 set $urgent         $nord11
 #-----------------------------------------------------------------------------#
 
@@ -85,23 +87,24 @@ client.background $background # default background color
 # text          - Text color for the title bar
 # indicator     - Color of border edge where new window will be created
 
-# class                 bar border  win border  text        indicator
-client.focused          $background $primary    $background $primary
-client.focused_inactive $background $bg_alt     $background $bg_alt
-client.unfocused        $background $background $foreground $background
-client.urgent           $background $urgent     $background $urgent
+# class                 bar border    window border  text         indicator
+client.focused          $background0  $accent        $text_dark   $accent
+client.focused_inactive $background0  $background2   $text_light  $background0
+client.unfocused        $background0  $background1   $text_light  $background0
+client.urgent           $background0  $background1   $text_dark   $urgent
 
 # Tiled and floating windows have a titlebar and no border
 default_border normal 0
 default_floating_border normal 0
 
+# Titlebar appearance. Font size controls the size of the bar
+font pango:$font_family Bold 12
 title_align center
+titlebar_padding 12
+titlebar_border_thickness 6
 
 # Workspaces use a tabbed layout by default (works well for small screens)
 workspace_layout tabbed
-
-# Font used by Sway; controls size of title bar
-font pango:$font_family Bold 12
 
 # Show gaps between open windows
 gaps inner 16
